--- a/vagrantfiles/Vagrantfile-Centos6.5
+++ b/vagrantfiles/Vagrantfile-Centos6.5
@@ -5,6 +5,6 @@ Vagrant.configure("2") do |config|
 
   # The url from where the 'config.vm.box' box will be fetched if it
   # doesn't already exist on the user's system.
-  config.vm.box_url = "https://downloads.bitmotive.com/boxes/Bitmotive/Centos6.5-64bit-BASE.box"
+  config.vm.box_url = "bitmotive/Centos6.5-64bit-BASE.box"
 
 end
